--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>2024 - Garotas de Anime. Todos os direitos não reservados</p>
         <p>Entre em contato pelo meu email: brunohenriquehoffmann55@gmail.com</p>
     </footer>
-    <script src="dados.js"></script> <!-- Os dados precisam carregar primeiro porque o app.js vai pegar os dados, então caso o app.js carregasse primeiro, ele não conseguiria pegar os valores) -->
+    <script src="dados.js"></script> <!-- Os dados precisam carregar primeiro porque o app.js vai pegar os dados, então caso o app.js carregasse primeiro, ele não conseguiria pegar os valores -->
     <script src="app.js"></script>
 </body>
 </html>
